Updating some tests in autoconf.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@61 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -25,8 +25,12 @@ AC_PROG_RANLIB
 
 # Checks for libraries.
 # On solaris, we need -lnsl and -lsocket
-AC_CHECK_LIB([socket], [socket])
-AC_CHECK_LIB([nsl], [gethostbyname])
+AC_CHECK_LIB([c], [socket], [],
+        AC_CHECK_LIB([socket], [socket])
+)
+AC_CHECK_LIB([c], [gethostbyname], [],
+        AC_CHECK_LIB([nsl], [gethostbyname])
+)
 
 # ACX_PTHREAD check included from http://www.gnu.org/software/ac-archive/htmldoc/acx_pthread.html
 AC_DEFUN([ACX_PTHREAD], [
