--- a/directnet/configure.ac
+++ b/directnet/configure.ac
@@ -25,8 +25,12 @@ AC_PROG_RANLIB
 
 # Checks for libraries.
 # On solaris, we need -lnsl and -lsocket
-AC_CHECK_LIB([socket], [socket])
-AC_CHECK_LIB([nsl], [gethostbyname])
+AC_CHECK_LIB([c], [socket], [],
+        AC_CHECK_LIB([socket], [socket])
+)
+AC_CHECK_LIB([c], [gethostbyname], [],
+        AC_CHECK_LIB([nsl], [gethostbyname])
+)
 
 # ACX_PTHREAD check included from http://www.gnu.org/software/ac-archive/htmldoc/acx_pthread.html
 AC_DEFUN([ACX_PTHREAD], [
