--- a/directnet/Makefile.in
+++ b/directnet/Makefile.in
@@ -182,6 +182,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 SUBDIRS = src
+EXTRA_DIST = acsite.m4
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
