Small fix to configure
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@65 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/Makefile.in
+++ b/Makefile.in
@@ -182,6 +182,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 SUBDIRS = src
+EXTRA_DIST = acsite.m4
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
