Beating my head over getting the C++ .a to work right.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@67 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/ui-wx/Makefile.in
+++ b/directnet/src/ui-wx/Makefile.in
@@ -119,9 +119,9 @@ STRIP = @STRIP@
 UI_CFLAGS = @UI_CFLAGS@
 UI_CPPFLAGS = @UI_CPPFLAGS@
 UI_CXXFLAGS = @UI_CXXFLAGS@
+UI_CXX_FALSE = @UI_CXX_FALSE@
+UI_CXX_TRUE = @UI_CXX_TRUE@
 UI_DIR = @UI_DIR@
-UI_DUMB_FALSE = @UI_DUMB_FALSE@
-UI_DUMB_TRUE = @UI_DUMB_TRUE@
 UI_LDFLAGS = @UI_LDFLAGS@
 UI_LIBS = @UI_LIBS@
 VERSION = @VERSION@
