--- a/src/ui-wx/Makefile.in
+++ b/src/ui-wx/Makefile.in
@@ -119,9 +119,9 @@ STRIP = @STRIP@
 UI_CFLAGS = @UI_CFLAGS@
 UI_CPPFLAGS = @UI_CPPFLAGS@
 UI_CXXFLAGS = @UI_CXXFLAGS@
+UI_CXX_FALSE = @UI_CXX_FALSE@
+UI_CXX_TRUE = @UI_CXX_TRUE@
 UI_DIR = @UI_DIR@
-UI_DUMB_FALSE = @UI_DUMB_FALSE@
-UI_DUMB_TRUE = @UI_DUMB_TRUE@
 UI_LDFLAGS = @UI_LDFLAGS@
 UI_LIBS = @UI_LIBS@
 VERSION = @VERSION@
