--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -50,10 +50,20 @@ CONFIG_CLEAN_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
-am_directnet_OBJECTS = directnet-client.$(OBJEXT) \
-	directnet-connection.$(OBJEXT) directnet-directnet.$(OBJEXT) \
-	directnet-gpg-fake.$(OBJEXT) directnet-hash.$(OBJEXT) \
-	directnet-server.$(OBJEXT)
+am__directnet_SOURCES_DIST = client.c connection.c directnet.c \
+	gpg-fake.c hash.c server.c fake.cc
+@UI_CXX_FALSE@am_directnet_OBJECTS = directnet-client.$(OBJEXT) \
+@UI_CXX_FALSE@	directnet-connection.$(OBJEXT) \
+@UI_CXX_FALSE@	directnet-directnet.$(OBJEXT) \
+@UI_CXX_FALSE@	directnet-gpg-fake.$(OBJEXT) \
+@UI_CXX_FALSE@	directnet-hash.$(OBJEXT) \
+@UI_CXX_FALSE@	directnet-server.$(OBJEXT)
+@UI_CXX_TRUE@am_directnet_OBJECTS = directnet-client.$(OBJEXT) \
+@UI_CXX_TRUE@	directnet-connection.$(OBJEXT) \
+@UI_CXX_TRUE@	directnet-directnet.$(OBJEXT) \
+@UI_CXX_TRUE@	directnet-gpg-fake.$(OBJEXT) \
+@UI_CXX_TRUE@	directnet-hash.$(OBJEXT) \
+@UI_CXX_TRUE@	directnet-server.$(OBJEXT) fake.$(OBJEXT)
 directnet_OBJECTS = $(am_directnet_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/scripts/depcomp
@@ -62,8 +72,13 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
+CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
+	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
+CXXLD = $(CXX)
+CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
+	-o $@
 SOURCES = $(directnet_SOURCES)
-DIST_SOURCES = $(directnet_SOURCES)
+DIST_SOURCES = $(am__directnet_SOURCES_DIST)
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	html-recursive info-recursive install-data-recursive \
 	install-exec-recursive install-info-recursive \
@@ -187,12 +202,20 @@ target_alias = @target_alias@
 SUBDIRS = @UI_DIR@
 AM_CFLAGS = @PTHREAD_CFLAGS@
 AM_LDFLAGS = @PTHREAD_LIBS@
-directnet_SOURCES = client.c \
-connection.c \
-directnet.c \
-gpg-fake.c \
-hash.c \
-server.c
+@UI_CXX_FALSE@directnet_SOURCES = client.c \
+@UI_CXX_FALSE@connection.c \
+@UI_CXX_FALSE@directnet.c \
+@UI_CXX_FALSE@gpg-fake.c \
+@UI_CXX_FALSE@hash.c \
+@UI_CXX_FALSE@server.c
+
+@UI_CXX_TRUE@directnet_SOURCES = client.c \
+@UI_CXX_TRUE@connection.c \
+@UI_CXX_TRUE@directnet.c \
+@UI_CXX_TRUE@gpg-fake.c \
+@UI_CXX_TRUE@hash.c \
+@UI_CXX_TRUE@server.c \
+@UI_CXX_TRUE@fake.cc
 
 directnet_CFLAGS = @UI_CFLAGS@
 directnet_LDFLAGS = @UI_LDFLAGS@
@@ -201,7 +224,7 @@ directnet_LDADD = @UI_DIR@/libui.a @UI_LIBS@
 all: all-recursive
 
 .SUFFIXES:
-.SUFFIXES: .c .o .obj
+.SUFFIXES: .c .cc .o .obj
 $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
@@ -256,7 +279,7 @@ clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
 directnet$(EXEEXT): $(directnet_OBJECTS) $(directnet_DEPENDENCIES) 
 	@rm -f directnet$(EXEEXT)
-	$(LINK) $(directnet_LDFLAGS) $(directnet_OBJECTS) $(directnet_LDADD) $(LIBS)
+	$(CXXLINK) $(directnet_LDFLAGS) $(directnet_OBJECTS) $(directnet_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -270,6 +293,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-gpg-fake.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-hash.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-server.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fake.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	if $(COMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
@@ -368,6 +392,20 @@ directnet-server.obj: server.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='server.c' object='directnet-server.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CFLAGS) $(CFLAGS) -c -o directnet-server.obj `if test -f 'server.c'; then $(CYGPATH_W) 'server.c'; else $(CYGPATH_W) '$(srcdir)/server.c'; fi`
+
+.cc.o:
+@am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ $<
+
+.cc.obj:
+@am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ `$(CYGPATH_W) '$<'`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
 uninstall-info-am:
 
 # This directory's subdirectories are mostly independent; you can cd
