Some fixes to configure.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@69 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/Makefile.am
+++ b/directnet/src/Makefile.am
@@ -3,13 +3,14 @@ SUBDIRS = @UI_DIR@
 CC=@PTHREAD_CC@
 
 AM_CFLAGS=@PTHREAD_CFLAGS@
+AM_CXXFLAGS=@PTHREAD_CFLAGS@
 AM_LDFLAGS=@PTHREAD_LIBS@
-
-bin_PROGRAMS=directnet
 
 if UI_CXX
 
-directnet_SOURCES=client.c \
+bin_PROGRAMS=directnetx
+
+directnetx_SOURCES=client.c \
 connection.c \
 directnet.c \
 gpg-fake.c \
@@ -17,7 +18,14 @@ hash.c \
 server.c \
 fake.cc
 
+directnetx_CFLAGS=@UI_CFLAGS@
+directnetx_LDFLAGS=@UI_LDFLAGS@
+directnetx_DEPENDENCIES=@UI_DIR@/libui.a
+directnetx_LDADD=@UI_DIR@/libui.a @UI_LIBS@
+
 else
+
+bin_PROGRAMS=directnet
 
 directnet_SOURCES=client.c \
 connection.c \
@@ -26,9 +34,9 @@ gpg-fake.c \
 hash.c \
 server.c
 
-endif
-
 directnet_CFLAGS=@UI_CFLAGS@
 directnet_LDFLAGS=@UI_LDFLAGS@
 directnet_DEPENDENCIES=@UI_DIR@/libui.a
 directnet_LDADD=@UI_DIR@/libui.a @UI_LIBS@
+
+endif
