Implemented locking on output.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@78 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/Makefile.am
+++ b/directnet/src/Makefile.am
@@ -15,6 +15,7 @@ connection.c \
 directnet.c \
 gpg-fake.c \
 hash.c \
+lock.c \
 server.c \
 fake.cc
 
@@ -32,6 +33,7 @@ connection.c \
 directnet.c \
 gpg-fake.c \
 hash.c \
+lock.c \
 server.c
 
 directnet_CFLAGS=@UI_CFLAGS@
