--- a/directnet/config.h.in
+++ b/directnet/config.h.in
@@ -3,6 +3,9 @@
 /* Found some version of curses that we're going to use */
 #undef HAS_CURSES
 
+/* Is readline available? */
+#undef HAS_READLINE
+
 /* Define to 1 if you have the <arpa/inet.h> header file. */
 #undef HAVE_ARPA_INET_H
 
@@ -57,6 +60,9 @@
 
 /* Define if you have POSIX threads libraries and header files. */
 #undef HAVE_PTHREAD
+
+/* Define to 1 if you have the <semaphore.h> header file. */
+#undef HAVE_SEMAPHORE_H
 
 /* Define to 1 if you have the `socket' function. */
 #undef HAVE_SOCKET
