Use POSIX thread mutex's instead of semaphores for locking.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@81 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -167,7 +167,7 @@ AM_CONDITIONAL(UI_CXX, test "x$UI_CXX" = "xtrue")
 # Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h semaphore.h stdlib.h string.h sys/socket.h unistd.h])
+AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
