C++-ing ui-curses
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@96 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -127,8 +127,8 @@ The appropriate libraries could not be found.
         else
                 UI_CFLAGS=$CURSES_INCLUDEDIR
                 UI_CPPFLAGS=
-                UI_CXXFLAGS=
-                UI_CXX=false
+                UI_CXXFLAGS=$CURSES_INCLUDEDIR
+                UI_CXX=true
                 UI_LIBS=$CURSES_LIBS
                 UI_LDFLAGS=
                 UI_DIR=ui-curses
