--- a/src/ui-curses/Makefile.am
+++ b/src/ui-curses/Makefile.am
@@ -1,5 +1,5 @@
-AM_CFLAGS=@UI_CFLAGS@ -I..
-AM_LDFLAGS=@UI_LDFLAGS@
-
 noinst_LIBRARIES=libui.a
-libui_a_SOURCES=ui.c
+libui_a_SOURCES=ui.cc
+libui_a_CFLAGS=@UI_CFLAGS@ -I..
+libui_a_CXXFLAGS=@UI_CXXFLAGS@ -I..
+libui_a_LIBS=@UI_LDFLAGS@
