*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@97 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/Makefile.am
+++ b/directnet/src/Makefile.am
@@ -2,10 +2,6 @@ SUBDIRS = @UI_DIR@
 
 CC=@PTHREAD_CC@
 
-AM_CFLAGS=@PTHREAD_CFLAGS@
-AM_CXXFLAGS=@PTHREAD_CFLAGS@
-AM_LDFLAGS=@PTHREAD_LIBS@
-
 if UI_CXX
 
 bin_PROGRAMS=directnetx
@@ -19,10 +15,11 @@ lock.c \
 server.c \
 fake.cc
 
-directnetx_CFLAGS=@UI_CFLAGS@
+directnetx_CFLAGS=@PTHREAD_CFLAGS@ @UI_CFLAGS@
+directnetx_CXXFLAGS=@PTHREAD_CFLAGS@ @UI_CXXFLAGS@
 directnetx_LDFLAGS=@UI_LDFLAGS@
 directnetx_DEPENDENCIES=@UI_DIR@/libui.a
-directnetx_LDADD=@UI_DIR@/libui.a @UI_LIBS@
+directnetx_LDADD=@PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @UI_DIR@/libui.a @UI_LIBS@
 
 else
 
@@ -36,9 +33,9 @@ hash.c \
 lock.c \
 server.c
 
-directnet_CFLAGS=@UI_CFLAGS@
-directnet_LDFLAGS=@UI_LDFLAGS@
+directnet_CFLAGS=@PTHREAD_CFLAGS@ @UI_CFLAGS@
+directnet_LDFLAGS=@PTHREAD_CFLAGS@ @UI_LDFLAGS@
 directnet_DEPENDENCIES=@UI_DIR@/libui.a
-directnet_LDADD=@UI_DIR@/libui.a @UI_LIBS@
+directnet_LDADD=@PTHREAD_LIBS@ @UI_DIR@/libui.a @UI_LIBS@
 
 endif
