--- a/directnet/src/Makefile.in
+++ b/directnet/src/Makefile.in
@@ -73,7 +73,8 @@ am__directnetx_SOURCES_DIST = client.c connection.c directnet.c \
 @UI_CXX_TRUE@	directnetx-gpg-fake.$(OBJEXT) \
 @UI_CXX_TRUE@	directnetx-hash.$(OBJEXT) \
 @UI_CXX_TRUE@	directnetx-lock.$(OBJEXT) \
-@UI_CXX_TRUE@	directnetx-server.$(OBJEXT) fake.$(OBJEXT)
+@UI_CXX_TRUE@	directnetx-server.$(OBJEXT) \
+@UI_CXX_TRUE@	directnetx-fake.$(OBJEXT)
 directnetx_OBJECTS = $(am_directnetx_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/scripts/depcomp
@@ -213,9 +214,6 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 SUBDIRS = @UI_DIR@
-AM_CFLAGS = @PTHREAD_CFLAGS@
-AM_CXXFLAGS = @PTHREAD_CFLAGS@
-AM_LDFLAGS = @PTHREAD_LIBS@
 @UI_CXX_TRUE@directnetx_SOURCES = client.c \
 @UI_CXX_TRUE@connection.c \
 @UI_CXX_TRUE@directnet.c \
@@ -225,10 +223,11 @@ AM_LDFLAGS = @PTHREAD_LIBS@
 @UI_CXX_TRUE@server.c \
 @UI_CXX_TRUE@fake.cc
 
-@UI_CXX_TRUE@directnetx_CFLAGS = @UI_CFLAGS@
+@UI_CXX_TRUE@directnetx_CFLAGS = @PTHREAD_CFLAGS@ @UI_CFLAGS@
+@UI_CXX_TRUE@directnetx_CXXFLAGS = @PTHREAD_CFLAGS@ @UI_CXXFLAGS@
 @UI_CXX_TRUE@directnetx_LDFLAGS = @UI_LDFLAGS@
 @UI_CXX_TRUE@directnetx_DEPENDENCIES = @UI_DIR@/libui.a
-@UI_CXX_TRUE@directnetx_LDADD = @UI_DIR@/libui.a @UI_LIBS@
+@UI_CXX_TRUE@directnetx_LDADD = @PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @UI_DIR@/libui.a @UI_LIBS@
 @UI_CXX_FALSE@directnet_SOURCES = client.c \
 @UI_CXX_FALSE@connection.c \
 @UI_CXX_FALSE@directnet.c \
@@ -237,10 +236,10 @@ AM_LDFLAGS = @PTHREAD_LIBS@
 @UI_CXX_FALSE@lock.c \
 @UI_CXX_FALSE@server.c
 
-@UI_CXX_FALSE@directnet_CFLAGS = @UI_CFLAGS@
-@UI_CXX_FALSE@directnet_LDFLAGS = @UI_LDFLAGS@
+@UI_CXX_FALSE@directnet_CFLAGS = @PTHREAD_CFLAGS@ @UI_CFLAGS@
+@UI_CXX_FALSE@directnet_LDFLAGS = @PTHREAD_CFLAGS@ @UI_LDFLAGS@
 @UI_CXX_FALSE@directnet_DEPENDENCIES = @UI_DIR@/libui.a
-@UI_CXX_FALSE@directnet_LDADD = @UI_DIR@/libui.a @UI_LIBS@
+@UI_CXX_FALSE@directnet_LDADD = @PTHREAD_LIBS@ @UI_DIR@/libui.a @UI_LIBS@
 all: all-recursive
 
 .SUFFIXES:
@@ -320,11 +319,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-client.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-connection.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-directnet.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-fake.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-gpg-fake.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-hash.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-lock.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-server.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fake.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	if $(COMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
@@ -549,6 +548,20 @@ directnetx-server.obj: server.c
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
+
+directnetx-fake.o: fake.cc
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CXXFLAGS) $(CXXFLAGS) -MT directnetx-fake.o -MD -MP -MF "$(DEPDIR)/directnetx-fake.Tpo" -c -o directnetx-fake.o `test -f 'fake.cc' || echo '$(srcdir)/'`fake.cc; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/directnetx-fake.Tpo" "$(DEPDIR)/directnetx-fake.Po"; else rm -f "$(DEPDIR)/directnetx-fake.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='fake.cc' object='directnetx-fake.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CXXFLAGS) $(CXXFLAGS) -c -o directnetx-fake.o `test -f 'fake.cc' || echo '$(srcdir)/'`fake.cc
+
+directnetx-fake.obj: fake.cc
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CXXFLAGS) $(CXXFLAGS) -MT directnetx-fake.obj -MD -MP -MF "$(DEPDIR)/directnetx-fake.Tpo" -c -o directnetx-fake.obj `if test -f 'fake.cc'; then $(CYGPATH_W) 'fake.cc'; else $(CYGPATH_W) '$(srcdir)/fake.cc'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/directnetx-fake.Tpo" "$(DEPDIR)/directnetx-fake.Po"; else rm -f "$(DEPDIR)/directnetx-fake.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='fake.cc' object='directnetx-fake.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CXXFLAGS) $(CXXFLAGS) -c -o directnetx-fake.obj `if test -f 'fake.cc'; then $(CYGPATH_W) 'fake.cc'; else $(CYGPATH_W) '$(srcdir)/fake.cc'; fi`
 uninstall-info-am:
 
 # This directory's subdirectories are mostly independent; you can cd
