Fixing encryption modularization.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@101 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,8 @@ AC_CONFIG_FILES(
 [
 Makefile
 src/Makefile
+src/enc-fake/Makefile
+src/enc-gpg/Makefile
 src/ui-curses/Makefile
 src/ui-dumb/Makefile
 src/ui-wx/Makefile
