--- a/directnet/src/Makefile.in
+++ b/directnet/src/Makefile.in
@@ -230,7 +230,7 @@ SUBDIRS = @UI_DIR@ @ENC_DIR@
 @UI_CXX_TRUE@directnetx_CXXFLAGS = @PTHREAD_CFLAGS@ @UI_CXXFLAGS@ @ENC_CXXFLAGS@
 @UI_CXX_TRUE@directnetx_LDFLAGS = @UI_LDFLAGS@ @ENC_LDFLAGS@
 @UI_CXX_TRUE@directnetx_DEPENDENCIES = @UI_DIR@/libui.a  @ENC_DIR@/libenc.a
-@UI_CXX_TRUE@directnetx_LDADD = @PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @UI_DIR@/libui.a @UI_LIBS@ @ENC_LIBS@
+@UI_CXX_TRUE@directnetx_LDADD = @PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @UI_DIR@/libui.a @ENC_DIR@/libenc.a @UI_LIBS@ @ENC_LIBS@
 @UI_CXX_FALSE@directnet_SOURCES = client.c \
 @UI_CXX_FALSE@connection.c \
 @UI_CXX_FALSE@directnet.c \
@@ -241,7 +241,7 @@ SUBDIRS = @UI_DIR@ @ENC_DIR@
 @UI_CXX_FALSE@directnet_CFLAGS = @PTHREAD_CFLAGS@ @UI_CFLAGS@ @ENC_CFLAGS@
 @UI_CXX_FALSE@directnet_LDFLAGS = @PTHREAD_CFLAGS@ @UI_LDFLAGS@ @ENC_LDFLAGS@
 @UI_CXX_FALSE@directnet_DEPENDENCIES = @UI_DIR@/libui.a @ENC_DIR@/libenc.a
-@UI_CXX_FALSE@directnet_LDADD = @PTHREAD_LIBS@ @UI_DIR@/libui.a @UI_LIBS@ @ENC_LIBS@
+@UI_CXX_FALSE@directnet_LDADD = @PTHREAD_LIBS@ @UI_DIR@/libui.a @ENC_DIR@/libenc.a @UI_LIBS@ @ENC_LIBS@
 all: all-recursive
 
 .SUFFIXES:
