UI-curses Makefile.\* updated.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@105 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/ui-curses/Makefile.am
+++ b/directnet/src/ui-curses/Makefile.am
@@ -1,4 +1,6 @@
 noinst_LIBRARIES=libui.a
-libui_a_SOURCES=ui.cc
+libui_a_SOURCES=DisplayWindow.cc \
+InputWindow.cc \
+ui.cc
 libui_a_CFLAGS=@UI_CFLAGS@ -I..
 libui_a_CXXFLAGS=@UI_CXXFLAGS@ -I..
