--- a/directnet/src/ui-curses/Makefile.am
+++ b/directnet/src/ui-curses/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES=libui.a
 libui_a_SOURCES=DisplayWindow.cc \
 InputWindow.cc \
+StatusWindow.cc \
 ui.cc
 libui_a_CFLAGS=@UI_CFLAGS@ -I..
 libui_a_CXXFLAGS=@UI_CXXFLAGS@ -I..
